@@ -1,3 +1,4 @@
+STARKA-24 fix gVCF site records to correctly inherit spanning deletion filters
 v2.0.6
 Change makefile to build when cwd is not in PATH
 v2.0.5
